--- a/Views/SaDamageRecoup/Index.cshtml
+++ b/Views/SaDamageRecoup/Index.cshtml
@@ -61,7 +61,7 @@
                             keys: true,
                             editOptions: { },
                             addOptions: { },
-                            delOptions: { url: 'saDamageRecoup/Delete' }
+                            delOptions: { url: 'SaDamageRecoup/Delete' }
                         }
                     },
                    { label: 'Inventory Tx Detail Id',name: 'inventoryTxDetailId', editable: true, edittype:"text", hidden:true,editoptions: { readonly: 'readonly'},key:true},
@@ -78,7 +78,7 @@
                     {
                         type: 'change',
                         fn: function(e) {
-                       name =$('#invAdj').jqGrid ('getCell', curRowId, 'supplierName');
+                       name =$('#saDamageRecoup').jqGrid ('getCell', curRowId, 'supplierName');
                       $('#saDamageRecoup').setColProp('productSku', { editoptions: { value:getProductSku()} });
                       $('#saDamageRecoup').setColProp('productName', { editoptions: { value:getProductName()} });
                        jQuery("saDamageRecoup").trigger('reloadGrid');
@@ -91,16 +91,16 @@
                    { label: 'Product Sku',name: 'productSku',fixed:true, editable: true,edittype:"select",formatter:'select'},
                    { label: 'Product Name',name: 'productName',fixed:true, editable: true, edittype:"select",formatter:'select'},
                    { label: 'Locations',name: 'inventoryLocationId',fixed:true, editable: true, edittype:"select",formatter:'select', editoptions:{value:getLocation()}},
-                   { label: 'Adjusted Stock',name: 'amount',fixed:true, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}},
+                   { label: 'Adjusted Stock',name: 'amount',fixed:true, editable: true, edittype:"text"},
                    { label: 'Reasons',name: 'inventoryTxReasonId',fixed:true, editable: true, edittype:"select",formatter:'select', editoptions:{value:getReasons()}},
-                   { label: 'Notes',name: 'comments',fixed:true, editable: true, edittype:"text", editoptions: { readonly: 'readonly'}}
+                   { label: 'Notes',name: 'comments',fixed:true, editable: true, edittype:"text"}
 
                  ], 
                viewrecords: true,
                height: 250,
                rowNum: 20,
                pager: "#jqGridPager",
-               editurl: 'saDamageRecoup/Update',
+               editurl: 'SaDamageRecoup/Update',
                onSelectRow: function(rowid) {
                 curRowId=rowid;
 
@@ -125,7 +125,7 @@
                    errorTextFormat: function (data) {
                        return 'Error: ' + data.responseText
                    },
-                   url: "Products/Add"
+                   url: "SaDamageRecoup/Add"
                });
 
        });
@@ -215,7 +215,7 @@
               function getProductSku() {
         var ProductSkuList= {};
         $.ajaxSetup( { "async": false } );
-        $.getJSON('SaDamageRecoup/CreateProductIdList', function(data) {
+        $.getJSON('SaDamageRecoup/CreateProductSkuList', function(data) {
         if (data != null) {
             for (var i = 0; i < data.length; i++) {
                 if(data[i].value == name)
@@ -231,6 +231,7 @@
            return ProductSkuList; 
 
         }
+
                 function getProductName() {
         var ProductNameList= {};
         $.ajaxSetup( { "async": false } );
